# agent_sdk

./: .gitignore  settings.gradle
app/: build.gradle  readme.md
app/src/androidTest/java/com/lg/vps_sdk_with_config/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lg/vps_sdk_with_config/: FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/res/layout/: activity_main.xml  fragment_first.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lg/vps_sdk_with_config/: ExampleUnitTest.java
lib_agent/: applymapping.txt  build.gradle  mapping.txt  printmapping.txt  proguard-rules.pro  seeds.txt  unused.txt
lib_agent/src/main/: AndroidManifest.xml
lib_agent/src/main/cpp/: CMakeLists.txt  ChannelMgr.cpp  ChannelMgr.h  DataQueue.cpp  DataQueue.h  HttpPostModule.cpp  HttpPostModule.h  TerminalUtil.cpp  TerminalUtil.h  VpsLoginMgr.cpp  VpsLoginMgr.h  VpsMgr.cpp  VpsMgr.h  WorkNode.cpp  WorkNode.h  a.json  com_z_s_S.h  dllmain.cpp  fifoNode.cpp  fifoNode.h  flowStatistics.cpp  flowStatistics.h  httpUtil.cpp  httpUtil.h  node.h  semx.cpp  semx.h  system.h  vps_so.cpp  zxlist.h  zxlog.h  zxpipe.cpp  zxpipe.h  zxselect.cpp  zxselect.h  zxsocket.cpp  zxsocket.h  zxstring.cpp  zxstring.h  zxstruct.h
lib_agent/src/main/cpp/libs/zlib/arm64-v8a/lib/: libz.so.1
lib_agent/src/main/cpp/libs/zlib/arm64-v8a/lib/pkgconfig/: zlib.pc
lib_agent/src/main/cpp/libs/zlib/armeabi-v7a/lib/: libz.so.1.2.13
lib_agent/src/main/cpp/libs/zlib/armeabi-v7a/lib/pkgconfig/: zlib.pc
lib_agent/src/main/cpp/libs/zlib/x86/lib/: libz.so.1.2.13
lib_agent/src/main/cpp/libs/zlib/x86/lib/pkgconfig/: zlib.pc
lib_agent/src/main/cpp/libs/zlib/x86_64/lib/: libz.so.1.2.13
lib_agent/src/main/cpp/libs/zlib/x86_64/lib/pkgconfig/: zlib.pc
lib_agent/src/main/java/com/lg/biz/: AgentManager.kt  LoginAgent.kt  VpsAgent.kt
lib_agent/src/main/java/com/lg/config/: Config.kt
lib_agent/src/main/java/com/lg/domain/: ConfigResp.kt  LoginNode.kt
lib_agent/src/main/java/com/lg/utils/: ConfigUtil.kt  CrashHandler.java  EncryptUtils.kt  FileUtils.kt  MD5Util.kt  NetworkUtil.kt  QYLog.kt  RandomUtil.kt  SharedPreferencesConfig.java  SharedPreferencesUtils.java  TerminalInfoUtil.kt
lib_agent/src/main/java/com/z/s/: Agent.kt  ISLoadCallBack.kt  S.java  SLoadStatusCode.kt
